[gd_scene load_steps=16 format=2]

[ext_resource path="res://PlayerBehavior.gd" type="Script" id=1]
[ext_resource path="res://PlayerStates.gd" type="Script" id=2]
[ext_resource path="res://PlayerSignals.gd" type="Script" id=3]
[ext_resource path="res://SpriteSheets/adventurer-v1.5-Sheet.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AttackArea/AttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 60, 61, 62, 63, 64 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 73, 74, 75 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24.1961, 59.7777 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 25, 50 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 26 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Signals" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 4 )
vframes = 16
hframes = 7

[node name="playerAnimator" type="AnimationPlayer" parent="Sprite"]
anims/Attack = SubResource( 1 )
anims/Duck = SubResource( 2 )
anims/Fall = SubResource( 3 )
anims/Hurt = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/IdleOffense = SubResource( 6 )
anims/Jump = SubResource( 7 )
anims/Run = SubResource( 8 )
anims/SheathSword = SubResource( 9 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 67, 10 )
shape = SubResource( 11 )
disabled = true

[node name="DamageArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="DamageBox" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, 10 )
scale = Vector2( 1.1, 1.05 )
shape = SubResource( 10 )
[connection signal="animation_finished" from="Sprite/playerAnimator" to="Signals" method="_on_playerAnimator_animation_finished"]
[connection signal="animation_started" from="Sprite/playerAnimator" to="Signals" method="_on_playerAnimator_animation_started"]
[connection signal="timeout" from="Timer" to="Signals" method="_on_Timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="AttackArea" to="Signals" method="_on_AttackArea_body_entered"]
[connection signal="area_entered" from="DamageArea" to="Signals" method="_on_DamageArea_area_entered"]
